--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
         .catch(err => console.error('Error', err));
     }
   </script>-->
+  <script src="https://code.highcharts.com/stock/highstock.js"></script>
+  <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
 
   <link href="build/main.css" rel="stylesheet">
 
